// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInit testing renders Result error when no data available 1`] = `
<div
  data-testid="appDefault"
>
  <div
    class="ant-result ant-result-warning"
  >
    <div
      class="ant-result-icon"
    >
      <i
        aria-label="icon: warning"
        class="anticon anticon-warning"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="warning"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M955.7 856l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zM480 416c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v184c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V416zm32 352a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-result-title"
    >
      There are some problems with your connection.
    </div>
    <div
      class="ant-result-extra"
    >
      <button
        class="ant-btn ant-btn-primary"
        style="width: 100px;"
        type="button"
      >
        <span>
          Retry
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`AppInit testing renders loading in default 1`] = `
<div
  class="ant-spin ant-spin-lg ant-spin-spinning"
  data-testid="appLoading"
>
  <span
    class="ant-spin-dot ant-spin-dot-spin"
  >
    <i
      class="ant-spin-dot-item"
    />
    <i
      class="ant-spin-dot-item"
    />
    <i
      class="ant-spin-dot-item"
    />
    <i
      class="ant-spin-dot-item"
    />
  </span>
</div>
`;

exports[`AppInit testing renders with content 1`] = `
<body>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="ant-spin ant-spin-lg ant-spin-spinning"
        data-testid="appLoading"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
        </span>
      </div>
    </div>
  </div>
</body>
`;
